--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 <html>
   <head>
     <title>Login Page</title>
+    <!-- Add these scripts to the <head> of your HTML file -->
+<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
+<!-- Include other Firebase modules as needed -->
+
+<script>
+  // Initialize Firebase with your configuration
+  const firebaseConfig = {
+    apiKey: "your-api-key",
+    authDomain: "your-auth-domain",
+    projectId: "your-project-id",
+    storageBucket: "your-storage-bucket",
+    messagingSenderId: "your-messaging-sender-id",
+    appId: "your-app-id"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+
+  // Use Firebase services in your application
+  // Example: const auth = firebase.auth();
+</script>
+
   </head>
   <body>
     <h1>Login</h1>
