--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script>
   // Initialize Firebase with your configuration
   const firebaseConfig = {
-    apiKey: "your-api-key",
+    apiKey: "6Laiudifubviwedwiudeiuewiuew",
     authDomain: "your-auth-domain",
     projectId: "your-project-id",
     storageBucket: "your-storage-bucket",
